scode/TeamDigital/prob11/error.txt
main.cpp: In function 'int solve(int*, int)':
main.cpp:11:9: error: 'currentgcd' was not declared in this scope
   11 |         currentgcd = gcd(currentgcd, health[i]);
      |         ^~~~~~~~~~
main.cpp:13:12: error: 'currentgcd' was not declared in this scope
   13 |     return currentgcd;
      |            ^~~~~~~~~~
